[tool.poetry]
name = "mbam-nextgen"
version = "0.1.0"
description = "MBAM NextGen SEO Automation and SaaS Backend"
authors = ["Admin <admin@example.com>"]
readme = "README.md"
packages = [{include = "mbam_nextgen"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
streamlit = "^1.28.2"
playwright = "^1.40.0"
sqlalchemy = "^2.0.23"
python-dotenv = "^1.0.0"
PyJWT = "^2.8.0"
redis = "^5.0.1"
celery = "^5.3.6"
aiohttp = "^3.9.1"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
httpx = "^0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
